--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,6 +26,9 @@
     <%= form.text_field :login %>
   </div>
 
+  <%= form.collection_select :expense_ids, Expense.all, :id, :title , {}, multiple: true%>
+  <%= form.file_field :avatar %>
+
   <div class="actions">
     <%= form.submit %>
   </div>
