--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,5 +1,14 @@
-<%= form_for(Expense.new) do |form| %>
+<%= form_for(@expense) do |form| %>
     <%= form.text_field :title%>
-    <%= form.collection_select :category_id, Category.all, :id, :title%>
+    # <%= form.collection_select :category_id, Category.all, :id, :title%>
+
+
+    <%= form.fields_for :category,  @expense.build_category do |category_form| %>
+        <%= category_form.label :title %>
+        <%= category_form.text_field :title %>
+        <% end %>
+
+  <%= form.collection_select :user_ids, User.all, :id, :name , {}, multiple: true%>
+    
     <%= form.submit %>
 <% end %>
