added single  table

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,7 @@
 <% @categories.each do |category|%>
     <p>
         <%= category.title %>
-        
+        |
+        <%= category.type %>
     </p> 
 <% end  %>
